cmake_minimum_required(VERSION 2.8)
project(METIS)

set(METIS_PATH "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "path to METIS")
SET (METIS_LIBRARY "metis" CACHE INTERNAL STRING)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Lib)

file(GLOB METIS_SOURCES Lib/*.c)

file(GLOB METIS_HEADERS Lib/*.h)

add_library(${METIS_LIBRARY} STATIC ${METIS_SOURCES} ${METIS_HEADERS})
